k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enterprise-app
  namespace: enterprise-app-prod
  labels:
    app: enterprise-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: enterprise-app
  template:
    metadata:
      labels:
        app: enterprise-app
    spec:
      containers:
        - name: enterprise-app
          image: amalpk531/enterprise-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
